[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Insha_Momin <110961366+codinginsha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
